# strlib

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  test.hpp
examples/conversion/: CMakeLists.txt  main.cpp  test_conversion.cpp
examples/date/: CMakeLists.txt  main.cpp  test_date.cpp
examples/format/: CMakeLists.txt  main.cpp  test_format.cpp
examples/printf/: CMakeLists.txt  main.cpp  test_printf.cpp
examples/string_builder/: CMakeLists.txt  main.cpp  test_string_builder.cpp
examples/string_reader/: CMakeLists.txt  main.cpp  test_string_reader.cpp
examples/trim/: CMakeLists.txt  main.cpp  test_trim.cpp
strlib/: api.hpp  io.cpp  io.hpp  string.cpp  string.hpp
test/: CMakeLists.txt
test/conversion/: CMakeLists.txt
test/date/: main.cpp
test/format/: CMakeLists.txt
test/trim/: CMakeLists.txt  main.cpp
